--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,439 +4,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
+    <link href="./css/styles.css" rel="stylesheet" />
     <title>Reto 3</title>
   </head>
   <body>
-    <div class="container mt-3 bg-light p-3">
-      <h4>Categorias</h4>
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            <div class="form-group">
-              <label for="name">Nombre</label>
-              <input
-                type="text"
-                class="form-control"
-                name="name"
-                id="name"
-                placeholder="Nombre"
-              />
-            </div>
-          </div>
-          <div class="col">
-            <div class="form-group">
-              <label for="description">Descripcion</label>
-              <input
-                type="text"
-                class="form-control"
-                name="description"
-                id="description"
-                placeholder="Descripcion"
-              />
-            </div>
-          </div>
-        </div>
+    <div class="content-page">
+      <div class="content-title">
+        <h1>Reservación de cabañas online</h1>
       </div>
-      <div class="container mt-3 mb-3">
-        <div class="row">
-          <div class="col" id="resultadoCategory"></div>
-        </div>
-      </div>
-      <div class="container mt-3">
-        <div class="row">
-          <div class="col">
-            <button
-              type="button"
-              class="btn btn-primary"
-              onclick="agregarCategory()"
-            >
-              Guardar
-            </button>
-            <button
-              type="button"
-              class="btn btn-primary"
-              onclick="consultarCategory()"
-            >
-              Consultar
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="container mt-3 bg-light p-3">
-      <h4>Cabañas</h4>
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            <div class="form-group">
-              <label for="brand">Marca</label>
-              <input
-                type="text"
-                class="form-control"
-                name="brand"
-                id="brand"
-                placeholder="Marca"
-              />
-            </div>
-          </div>
-          <div class="col">
-            <div class="form-group">
-              <label for="rooms">Habitaciones</label>
-              <input
-                type="number"
-                class="form-control"
-                name="rooms"
-                id="rooms"
-                placeholder="Habitaciones"
-              />
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col">
-            <div class="form-group">
-              <label for="nameCabin">Nombre</label>
-              <input
-                type="text"
-                class="form-control"
-                name="nameCabin"
-                id="nameCabin"
-                placeholder="Nombre"
-              />
-            </div>
-          </div>
-          <div class="col">
-            <div class="form-group">
-              <label for="descriptionCabin">Descripcion</label>
-              <input
-                type="text"
-                class="form-control"
-                name="descriptionCabin"
-                id="descriptionCabin"
-                placeholder="Descripcion"
-              />
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col">
-            <div class="form-group">
-              <label for="idCategoria">Categoria</label>
-              <input
-                type="number"
-                class="form-control"
-                name="idCategoria"
-                id="idCategoria"
-                placeholder="Categoria"
-              />
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="container mt-3 mb-3">
-        <div class="row">
-          <div class="col" id="resultadoCabin"></div>
-        </div>
-      </div>
-      <div class="container mt-3">
-        <div class="row">
-          <div class="col">
-            <button
-              type="button"
-              class="btn btn-primary"
-              onclick="agregarCabin()"
-            >
-              Guardar
-            </button>
-            <button
-              type="button"
-              class="btn btn-primary"
-              onclick="consultarCabin()"
-            >
-              Consultar
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="container mt-3 bg-light p-3">
-      <h4>Clientes</h4>
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            <div class="form-group">
-              <label for="nameClient">Nombre</label>
-              <input
-                type="text"
-                class="form-control"
-                name="nameClient"
-                id="nameClient"
-                placeholder="Nombre"
-              />
-            </div>
-          </div>
-          <div class="col">
-            <div class="form-group">
-              <label for="email">Correo electronico</label>
-              <input
-                type="text"
-                class="form-control"
-                name="email"
-                id="email"
-                placeholder="Correo electronico"
-              />
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col">
-            <div class="form-group">
-              <label for="password">Contraseña</label>
-              <input
-                type="text"
-                class="form-control"
-                name="password"
-                id="password"
-                placeholder="Contraseña"
-              />
-            </div>
-          </div>
-          <div class="col">
-            <div class="form-group">
-              <label for="age">Edad</label>
-              <input
-                type="number"
-                class="form-control"
-                name="age"
-                id="age"
-                placeholder="Edad"
-              />
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="container mt-3 mb-3">
-        <div class="row">
-          <div class="col" id="resultadoClient"></div>
-        </div>
-      </div>
-      <div class="container mt-3">
-        <div class="row">
-          <div class="col">
-            <button
-              type="button"
-              class="btn btn-primary"
-              onclick="agregarClient()"
-            >
-              Guardar
-            </button>
-            <button
-              type="button"
-              class="btn btn-primary"
-              onclick="consultarClient()"
-            >
-              Consultar
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="container mt-3 bg-light p-3">
-      <h4>Mensajes</h4>
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            <div class="form-group">
-              <label for="messageText">Texto del mensaje</label>
-              <input
-                type="text"
-                class="form-control"
-                name="messageText"
-                id="messageText"
-                placeholder="Texto del mensaje"
-              />
-            </div>
-          </div>
-          <div class="col">
-            <div class="form-group">
-              <label for="clientId">Cliente</label>
-              <input
-                type="text"
-                class="form-control"
-                name="clientId"
-                id="clientId"
-                placeholder="Cliente"
-              />
-            </div>
-          </div>
-          <div class="col">
-            <div class="form-group">
-              <label for="cabinId">Cabaña</label>
-              <input
-                type="text"
-                class="form-control"
-                name="cabinId"
-                id="cabinId"
-                placeholder="Cabaña"
-              />
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="container mt-3 mb-3">
-        <div class="row">
-          <div class="col" id="resultadoMessage"></div>
-        </div>
-      </div>
-      <div class="container mt-3">
-        <div class="row">
-          <div class="col">
-            <button
-              type="button"
-              class="btn btn-primary"
-              onclick="agregarMessage()"
-            >
-              Guardar
-            </button>
-            <button
-              type="button"
-              class="btn btn-primary"
-              onclick="consultarMessage()"
-            >
-              Consultar
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="container mt-3 bg-light p-3">
-      <h4>Reservaciones</h4>
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            <div class="form-group">
-              <label for="startDate">Fecha de inicio</label>
-              <input
-                type="date"
-                class="form-control"
-                name="startDate"
-                id="startDate"
-                placeholder="Fecha de inicio"
-              />
-            </div>
-          </div>
-          <div class="col">
-            <div class="form-group">
-              <label for="devolutionDate">Fecha devolucion</label>
-              <input
-                type="date"
-                class="form-control"
-                name="devolutionDate"
-                id="devolutionDate"
-                placeholder="Fecha devolucion"
-              />
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col">
-            <div class="form-group">
-              <label for="clientIdReservation">Cliente</label>
-              <input
-                type="number"
-                class="form-control"
-                name="clientIdReservation"
-                id="clientIdReservation"
-                placeholder="Cliente"
-              />
-            </div>
-          </div>
-          <div class="col">
-            <div class="form-group">
-              <label for="cabinIdReservation">Cabaña</label>
-              <input
-                type="number"
-                class="form-control"
-                name="cabinIdReservation"
-                id="cabinIdReservation"
-                placeholder="Cabaña"
-              />
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="container mt-3 mb-3">
-        <div class="row">
-          <div class="col" id="resultadoReservation"></div>
-        </div>
-      </div>
-      <div class="container mt-3">
-        <div class="row">
-          <div class="col">
-            <button
-              type="button"
-              class="btn btn-primary"
-              onclick="agregarReservation()"
-            >
-              Guardar
-            </button>
-            <button
-              type="button"
-              class="btn btn-primary"
-              onclick="consultarReservation()"
-            >
-              Consultar
-            </button>
-          </div>
-        </div>
+      <div class="content-navbar">
+        <ul>
+          <li><a href="./pages/categorias.html">Categorias</a></li>
+          <li><a href="./pages/cabanias.html">Cabañas</a></li>
+          <li><a href="./pages/clientes.html">Clientes</a></li>
+          <li><a href="./pages/mensajes.html">Mensajes</a></li>
+          <li><a href="./pages/reservaciones.html">Reservaciones</a></li>
+          <li><a href="./pages/reportes.html">Reportes</a></li>
+        </ul>
       </div>
     </div>
 
-    <div
-      class="modal fade"
-      id="modalAlert"
-      tabindex="-1"
-      aria-labelledby="modalAlertLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="modalAlertLabel"></h5>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="modal-body">
-            <p id="textMessage"></p>
-          </div>
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-secondary"
-              data-bs-dismiss="modal"
-            >
-              Confirmar
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script type="text/javascript" src="./js/fuctions.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
